# ForMistakeLearning

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MAINTENANCE.md  PUBLISHING.md  README.md
.github/workflows/: ci.yml  release.yml
docs/: API_REFERENCE.md  USER_GUIDE.md
examples/: basic_analysis.rs  exploitation_analysis.rs  json_output.rs
src/: analyzer.rs  error.rs  exploitation.rs  fetcher.rs  lib.rs  main.rs  models.rs
